# medsos

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  pyproject.toml
deploy/: medsos.service.example
migrations/: env.py
migrations/versions/: 001_initial_accounts_posts_replies_events.py  002_add_oauth_states.py
plugin/: __init__.py  plugin.yaml  schemas.py  tools.py
scripts/: account.py  serve.py
src/medsos/: __init__.py  config.py  crypto.py  db.py  install.py  models.py  onboarding.py  ops.py  state.py
src/medsos/web/: accounts.py  app.py  health.py  webhooks.py
tests/: conftest.py  test_config.py  test_crypto.py  test_install.py  test_models.py  test_ops.py  test_platforms_threads_auth.py  test_platforms_threads_client.py  test_platforms_threads_webhook.py  test_plugin_register.py  test_plugin_tools.py  test_web_accounts.py  test_web_webhooks.py
