[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medsos"
version = "0.1.0"
description = "Reusable state engine + Hermes toolset for social media accounts (Threads v1)."
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "cryptography>=42",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.12",
]

[project.scripts]
medsos-install = "medsos.install:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"